--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">
+        Random Passcode (Passcode # @Context.Session.GetInt32("Counter"))
+    </h1>
+
+    @Context.Session.GetString("Password")
+
+    <form asp-action="GeneratePasscode" asp-controller="Home" method="POST">
+        <input type="submit" value="Generate">
+    </form>    
 </div>
